--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enhanced-dom/intl",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Utilities for managing translation keys inside the app",
   "keywords": [],
   "repository": "https://github.com/enhanced-dom/intl.git",
@@ -13,32 +13,32 @@
     "postbuild": "copyfiles LICENSE.md README.md dist && @enhanced-dom-copy-packagejson",
     "package": "cd dist && npm pack",
     "postinstall": "@enhanced-dom-husky",
-    "lint": "eslint --fix --config eslint.config.js --ext ts src",
-    "test": "jest --config test/jest.config.js",
+    "lint": "eslint --fix --config eslint.config.js src test",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --config test/jest.config.js",
     "pretest": "npm run build"
   },
   "dependencies": {
     "lodash.isequal": "^4.5.0",
     "require-from-string": "^2.0.2",
-    "schema-utils": "^4.0.0",
-    "@enhanced-dom/webpack": "^0.0.11"
+    "schema-utils": "^4.2.0",
+    "@enhanced-dom/webpack": "^0.1.0"
   },
   "devDependencies": {
-    "@enhanced-dom/babel": "^0.0.5",
-    "@enhanced-dom/jest": "^0.0.1",
-    "@enhanced-dom/lint": "^0.0.9",
-    "@types/babel__helper-plugin-utils": "^7.10.0",
-    "@types/webpack": "^5.28.0",
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/require-from-string": "^1.2.1",
-    "typescript": "^4.2.2"
+    "@enhanced-dom/babel": "^0.1.0",
+    "@enhanced-dom/jest": "^0.1.0",
+    "@enhanced-dom/lint": "^0.1.4",
+    "@types/jest": "^29.5.12",
+    "@types/babel__helper-plugin-utils": "^7.10.3",
+    "@types/webpack": "^5.28.5",
+    "@types/lodash.isequal": "^4.5.8",
+    "@types/require-from-string": "^1.2.3"
   },
   "peerDependencies": {
-    "@babel/helper-plugin-utils": "^7.0.0",
-    "@babel/types": "^7.18.0"
+    "@babel/helper-plugin-utils": "^7.22.5",
+    "@babel/types": "^7.23.9"
   },
   "engines": {
-    "node": ">=14.17.0",
-    "npm": ">=8.6.0"
+    "node": ">=18",
+    "npm": ">=10"
   }
 }
